--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "csv": "^6.2.6",
+    "dotenv": "^16.0.3",
     "mongodb": "5.0.0"
   },
   "author": "Patrick Howard",
